fix(comp:tooltip): tooltip content should wrap on line break

--- a/packages/components/tooltip/style/index.less
+++ b/packages/components/tooltip/style/index.less
@@ -12,6 +12,7 @@
   &-wrapper {
     position: relative;
     word-wrap: break-word;
+    white-space: var(--ix-tooltip-white-space);
     min-width: var(--ix-tooltip-min-width);
     max-width: var(--ix-tooltip-max-width);
     padding: var(--ix-padding-size-xs) var(--ix-padding-size-sm);
